<resources>
    <string name="app_name">Canvas</string>
    <string name="action_settings">Settings</string>
    <string name="provide_storage_permission">Please enable Storage permission for this application.</string>
    <string name="settings">SETTINGS</string>
    <string name="add_image">Tap the \'+\' button to\nadd an image to the canvas.</string>
    <string name="grayscale">Grayscale</string>
    <string name="choose_effect">Choose Effect</string>
    <string name="collection">Collection</string>
    <string name="canvas">Canvas</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="invert_image">Invert image</string>
    <string name="flip_image">Flip image</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="boost_color">Boost color</string>
    <string name="save_dialog_title">Save Canvas</string>
    <string name="save_dialog_message">Save the current Canvas to your Collection?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overwrite">Overwrite</string>
    <string name="new_item">New Item</string>
    <string name="cancel_dialog_title">Cancel</string>
    <string name="cancel_dialog_message">Cancel all the current Canvas changes?</string>
    <string name="canvas_saved_successfully">The Canvas was successfully saved to your Collection.</string>
    <string name="canvas_not_saved_successfully">An error occurred while trying to save the Canvas.</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="no_items_to_display">No items to display.</string>
    <string name="rotate">Rotate</string>
    <string name="overwrite_dialog_title">Overwrite Canvas?</string>
    <string name="overwrite_dialog_message">This Canvas was edited.\nOverwrite the old Canvas or create a new one?</string>
    <string name="sepia">Sepia</string>
    <string name="red">"Red: "</string>
    <string name="green">"Green: "</string>
    <string name="blue">"Blue: "</string>
    <string name="angle">"Angle: "</string>
    <string name="select_items">Select items</string>
    <string name="one_item_selected">One item selected</string>
    <string name="x_items_selected">%1$d items selected</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Delete the selected canvases?</string>
    <string name="deleted_canvases">Successfully deleted the canvas(es)!</string>
    <string name="brightness">Brightness</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="value">"Value: "</string>
    <string name="value_percent">%1$d%%</string>
    <string name="value_percent_string">%1$s%%</string>
    <string name="share_title">Share Canvases</string>
    <string name="value_degrees">%1$d&#xb0;</string>
</resources>
