<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.patrau.roxana.photoedit.MainActivity">

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_done_white"
        android:orderInCategory="100"
        android:title="@string/done"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_clear_white"
        android:orderInCategory="200"
        android:title="@string/cancel"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
